делает адаптивное меню

--- a/source/index.html
+++ b/source/index.html
@@ -12,6 +12,12 @@
 	<h1 class="visually-hidden">Мы продаем велосипеды</h1>
 	<header class="header">
 
+		<div class="header__adv adv">
+			<img src="img/logo.svg" width="68" height="21" alt="Логотип компании">
+			<p class="adv__title">Мы продаем велосипеды</p>
+			<p class="adv__content">Наш магазин отбирает только самые лучшие велосипеды для продажи</p>
+		</div>
+
 		<nav class="header__nav nav">
 			<button class="nav__toggle" type="button" aria-label="Отобразить меню"
 			        aria-expanded="false" aria-controls="main-menu">
@@ -22,7 +28,7 @@
 					<a class="nav__link" href="#">О нас</a>
 				</li>
 				<li class="nav__item">
-					<a class="nav__link" href="#">Виды велосипедов</a>
+					<a class="nav__link nav__link--margin" href="#">Виды велосипедов</a>
 				</li>
 				<li class="nav__item">
 					<a class="nav__link" href="#">Видео про велосипеды</a>
@@ -48,12 +54,6 @@
 				<img class="header__bg" src="img/desktop/main-bg@1x.jpg" srcset="img/desktop/main-bg@2x.jpg 2x" width="1440" height="825"
 				     alt="Изображение велосипеда">
 			</picture>
-		</div>
-
-		<div class="header__adv adv">
-			<img src="img/logo.svg" width="68" height="21" alt="Логотип компании">
-			<p class="adv__title">Мы продаем велосипеды</p>
-			<p class="adv__content">Наш магазин отбирает только самые лучшие велосипеды для продажи</p>
 		</div>
 	</header>
 	<main>
