--- a/source/index.html
+++ b/source/index.html
@@ -93,9 +93,57 @@
 			</ul>
 		</section>
 
+		<section class="variety">
+		    <h2 class="variety__title">Виды велосипедов</h2>
+			<ul>
+				<li>
+					<a href="#">
+						<figure>
+							<img src="img/desktop/bike1@1x.jpg" width="342" height="503" alt="Дорожный велосипед">
+							<figcaption>
+								Дорожный велосипед
+							</figcaption>
+						</figure>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<figure>
+							<img src="img/desktop/bike2@1x.jpg" width="342" height="566" alt="Горный велосипед">
+							<figcaption>
+								Горный велосипед
+							</figcaption>
+						</figure>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<figure>
+							<img src="img/desktop/bike3@1x.jpg" width="342" height="513" alt="Детский велосипед">
+							<figcaption>
+								Детский велосипед
+							</figcaption>
+						</figure>
+					</a>
+				</li>
+			</ul>
+		</section>
+
 	</main>
 
+	<footer>
+		<ul class="contact">
+			<li>
+				<a class="contact__link contact__link--mail" href="mailto:puteshestviemechta@gmail.ru">puteshestviemechta@gmail.ru</a>
+			</li>
+			<li>
+				<a class="contact__link contact__link--phone" href="tel:+749978468446">+7 (499) -784-684-46</a>
+			</li>
+		</ul>
+	</footer>
 </div>
+
 <script src="js/main.min.js"></script>
+<script src="js/picturefill.min.js"></script>
 </body>
 </html>
