новая сборка + хедер

--- a/source/html/base/header.html
+++ b/source/html/base/header.html
@@ -1,21 +1,21 @@
 <header class="header @@if (context.mod) { header--@@mod }">
 	<nav class="header__nav nav">
-		<button class="nav__toggle" type="button" aria-label="Отобразить меню"
-		        aria-expanded="false" aria-controls="main-menu">
+		<button class="nav__toggle" type="button" aria-label="открыть-закрыть меню"
+		        aria-expanded="false">
 			<span class="nav__burger"></span>
 		</button>
-		<ul id="main-menu" class="nav__list">
+		<ul class="nav__list">
 			<li class="nav__item">
-				<a class="nav__link" href="#">О нас</a>
+				<a class="nav__link" href="#about">О нас</a>
 			</li>
 			<li class="nav__item">
-				<a class="nav__link nav__link--margin" href="#">Виды велосипедов</a>
+				<a class="nav__link nav__link--margin" href="#variety">Виды велосипедов</a>
 			</li>
 			<li class="nav__item">
-				<a class="nav__link" href="#">Видео про велосипеды</a>
+				<a class="nav__link" href="#video">Видео про велосипеды</a>
 			</li>
 			<li class="nav__item">
-				<a class="nav__link" href="#">Контакты</a>
+				<a class="nav__link" href="#contact">Контакты</a>
 			</li>
 		</ul>
 	</nav>
