--- a/source/html/base/footer.html
+++ b/source/html/base/footer.html
@@ -1,20 +1,21 @@
 <footer>
-	<ul class="contact">
-		<li>
-			<a class="contact__link contact__link--mail" href="mailto:puteshestviemechta@gmail.ru" aria-label="Написать нам письмо">
-				<svg class="contact__icon" width="26" height="20" aria-hidden="true">
-					<use href="img/sprite_auto.svg#mail"></use>
-				</svg>
-				<span>puteshestviemechta@gmail.ru</span>
-			</a>
-		</li>
-		<li>
-			<a class="contact__link contact__link--phone" href="tel:+749978468446" aria-label="Позвонить нам">
-				<svg class="contact__icon" width="22" height="24" aria-hidden="true">
-					<use href="img/sprite_auto.svg#phone"></use>
-				</svg>
-				<span>+7 (499) -784-684-46</span>
-			</a>
-		</li>
-	</ul>
+  <ul class="contact">
+    <li>
+      <a class="contact__link contact__link--mail" href="mailto:puteshestviemechta@gmail.ru"
+          aria-label="Написать нам письмо">
+        <svg class="contact__icon" width="26" height="20" aria-hidden="true">
+          <use href="img/sprite_auto.svg#mail"></use>
+        </svg>
+        <span>puteshestviemechta@gmail.ru</span>
+      </a>
+    </li>
+    <li>
+      <a class="contact__link contact__link--phone" href="tel:+749978468446" aria-label="Позвонить нам">
+        <svg class="contact__icon" width="22" height="24" aria-hidden="true">
+          <use href="img/sprite_auto.svg#phone"></use>
+        </svg>
+        <span>+7 (499) -784-684-46</span>
+      </a>
+    </li>
+  </ul>
 </footer>
