--- a/source/html/index.html
+++ b/source/html/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>bicycle</title>
-	@@include("source/html/base/head.html")
+  <title>bicycle</title>
+  @@include("source/html/base/head.html")
 </head>
 <body>
 <div class="intro">
-	<div class="intro__height"></div>
-	<div class="intro__wrap">
-@@include("source/html/base/header.html")
-@@include("source/html/components/offer.html")
-	</div>
+  <div class="intro__height"></div>
+  <div class="intro__wrap">
+    @@include("source/html/base/header.html")
+    @@include("source/html/components/offer.html")
+  </div>
 </div>
 
 <main>
-	<h1 class="visually-hidden">Мы продаем велосипеды</h1>
-@@include("source/html/components/about.html")
-@@include("source/html/components/variety.html")
+  <h1 class="visually-hidden">Мы продаем велосипеды</h1>
+  @@include("source/html/components/about.html")
+  @@include("source/html/components/variety.html")
 </main>
 @@include("source/html/base/footer.html")
+@@include("source/html/base/modal.html")
 
 <script src="js/vendor.min.js"></script>
 <script src="js/main.min.js"></script>
