подключает полифил для ie11

--- a/source/html/base/footer.html
+++ b/source/html/base/footer.html
@@ -4,7 +4,7 @@
       <a class="contact__link contact__link--mail" href="mailto:puteshestviemechta@gmail.ru"
           aria-label="Написать нам письмо">
         <svg class="contact__icon" width="26" height="20" aria-hidden="true">
-          <use href="img/sprite_auto.svg#mail"></use>
+          <use href="#mail"></use>
         </svg>
         <span>puteshestviemechta@gmail.ru</span>
       </a>
@@ -12,7 +12,7 @@
     <li>
       <a class="contact__link contact__link--phone" href="tel:+749978468446" aria-label="Позвонить нам">
         <svg class="contact__icon" width="22" height="24" aria-hidden="true">
-          <use href="img/sprite_auto.svg#phone"></use>
+          <use href="#phone"></use>
         </svg>
         <span>+7 (499) -784-684-46</span>
       </a>
