--- a/source/html/index.html
+++ b/source/html/index.html
@@ -5,6 +5,7 @@
   @@include("source/html/base/head.html")
 </head>
 <body>
+@@include("source/html/components/sprite.html")
 <div class="intro">
   <div class="intro__height"></div>
   <div class="intro__wrap">
