--- a/source/html/index.html
+++ b/source/html/index.html
@@ -18,6 +18,7 @@
   <h1 class="visually-hidden">Мы продаем велосипеды</h1>
   @@include("source/html/components/about.html")
   @@include("source/html/components/variety.html")
+  @@include("source/html/components/video.html")
 </main>
 @@include("source/html/base/footer.html")
 @@include("source/html/base/modal.html")
