добавляет секцию контакт

--- a/source/html/base/footer.html
+++ b/source/html/base/footer.html
@@ -1,17 +1,17 @@
-<footer>
-  <ul class="contact">
-    <li>
-      <a class="contact__link contact__link--mail" href="mailto:puteshestviemechta@gmail.ru"
+<footer class="footer">
+  <ul class="footer__list">
+    <li class="footer__item">
+      <a class="footer__link footer__link--mail" href="mailto:puteshestviemechta@gmail.ru"
           aria-label="Написать нам письмо">
-        <svg class="contact__icon" width="26" height="20" aria-hidden="true">
+        <svg class="footer__icon footer__icon--mail" width="26" height="20" aria-hidden="true">
           <use href="#mail"></use>
         </svg>
         <span>puteshestviemechta@gmail.ru</span>
       </a>
     </li>
-    <li>
-      <a class="contact__link contact__link--phone" href="tel:+749978468446" aria-label="Позвонить нам">
-        <svg class="contact__icon" width="22" height="24" aria-hidden="true">
+    <li class="footer__item footer__item--phone">
+      <a class="footer__link footer__link--phone" href="tel:+749978468446" aria-label="Позвонить нам">
+        <svg class="footer__icon footer__icon--phone" width="22" height="24" aria-hidden="true">
           <use href="#phone"></use>
         </svg>
         <span>+7 (499) -784-684-46</span>
