--- a/source/html/index.html
+++ b/source/html/index.html
@@ -19,6 +19,7 @@
   @@include("source/html/components/about.html")
   @@include("source/html/components/variety.html")
   @@include("source/html/components/video.html")
+  @@include("source/html/components/contact.html")
 </main>
 @@include("source/html/base/footer.html")
 @@include("source/html/base/modal.html")
