--- a/source/html/index.html
+++ b/source/html/index.html
@@ -26,5 +26,6 @@
 
 <script src="js/vendor.min.js"></script>
 <script src="js/main.min.js"></script>
+<script src="js/validate.js"></script>
 </body>
 </html>
