--- a/source/html/base/head.html
+++ b/source/html/base/head.html
@@ -4,7 +4,6 @@
 <meta name="description" content="bicycle">
 
 <!-- генерируйте favicon тут - https://realfavicongenerator.net/ -->
-
 <!-- <link href="favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
 <link href="favicon/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
 <link href="favicon/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
@@ -15,9 +14,8 @@
 <meta content="favicon/browserconfig.xml" name="msapplication-config">
 <meta content="#ffffff" name="theme-color">
  -->
-
-<!-- используйте только для шрифта находящегося на первом экране -->
-
-<!-- <link rel="preload" href="fonts/placeholder.woff2" as="font" crossorigin="anonymous"> -->
+ <link rel="preload" href="fonts/OpenSans-Bold.woff2" as="font" crossorigin="anonymous">
+ <link rel="preload" href="fonts/OpenSans-Light.woff2" as="font" crossorigin="anonymous">
+ <link rel="preload" href="fonts/OpenSans-Regular.woff2" as="font" crossorigin="anonymous">
 
 <link rel="stylesheet" href="css/style.min.css">
