--- a/source/html/index.html
+++ b/source/html/index.html
@@ -24,7 +24,7 @@
 @@include("source/html/base/footer.html")
 @@include("source/html/base/modal.html")
 
-<script src="js/vendor.min.js"></script>
-<script src="js/main.min.js"></script>
+<script src="js/vendor.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
