--- a/source/html/base/header.html
+++ b/source/html/base/header.html
@@ -9,7 +9,7 @@
         <a class="nav__link" href="#about">О нас</a>
       </li>
       <li class="nav__item">
-        <a class="nav__link nav__link--margin" href="#variety">Виды велосипедов</a>
+        <a class="nav__link" href="#variety">Виды велосипедов</a>
       </li>
       <li class="nav__item">
         <a class="nav__link" href="#video">Видео про велосипеды</a>
