--- a/source/html/base/modal.html
+++ b/source/html/base/modal.html
@@ -1,6 +1,5 @@
-<div class="modal modal--invisible">
-  <div class="modal__wrap">
-    <div class="modal__inner">
+<div class="modal">
+    <div class="modal__wrap">
       <svg width="100" height="90">
         <use href="#tick"></use>
       </svg>
@@ -9,5 +8,4 @@
         деталей!</p>
       <button class="modal__close modal__close--success" type="button" aria-label="Закрыть окно">Закрыть</button>
     </div>
-  </div>
 </div>
