--- a/source/html/index.html
+++ b/source/html/index.html
@@ -23,7 +23,13 @@
 </main>
 @@include("source/html/base/footer.html")
 @@include("source/html/base/modal.html")
-
+<template>
+  <span class="form__input-valid">
+    <svg width="20" height="18">
+      <use href="#tick"></use>
+    </svg>
+  </span>
+</template>
 <script src="js/vendor.js"></script>
 <script src="js/main.js"></script>
 </body>
